# tlsrpt-rs

./: Cargo.toml  README.md
.builds/: test.yml
tlsrpt/: Cargo.toml
tlsrpt/fixtures/: empty.eml  google1.eml  google2.eml  mail.ru.eml  mail.ru.json  microsoft1.eml  rfc8460.json
tlsrpt/src/: lib.rs  main.rs
