[package]
name = "tlsrpt"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
mail-parser = "0.11.0"
flate2 = "1.1.1"
cluFlock = "1.2.7"
clap = { version = "4.5.39", features = ["derive","env"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known", "macros"] }
imap = "3.0.0-alpha.15"
